noinst_PROGRAMS = test 
test_SOURCES = test.cpp 
test_LDADD = libcppcmstranstext.la
lib_LTLIBRARIES=libcppcmstranstext.la
libcppcmstranstext_la_SOURCES = transtext.cpp lambda.cpp mo_file.cpp trans_factory.cpp
libcppcmstranstext_la_LDFLAGS = -no-undefined
noinst_HEADERS = mo_file.h
nobase_pkginclude_HEADERS = transtext.h
